--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,19 +1,60 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
+<!DOCTYPE html>
+<html id="HTML" xmlns="http://www.w3.org/1999/xhtml" lang="en-us">
 <head>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="generator" content="Jekyll v{{ jekyll.version }}">
-  {% feed_meta %}
-  <link rel="alternate" type="application/atom+xml" title="Recent commits to Jekyll’s master branch" href="{{ site.repository }}/commits/master.atom">
-  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic,700,700italic,900">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" />
-  <link rel="stylesheet" href="/css/screen.css">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  {% seo %}
-  <!--[if lt IE 9]>
-  <script src="/js/html5shiv.min.js"></script>
-  <script src="/js/respond.min.js"></script>
-  <![endif]-->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+  <link rel="stylesheet" href="/css/screen.css" type="text/css"/>
+
+  <link type="image/x-icon" href="/img/favicon.ico" rel="shortcut icon">
+  <link type="image/x-icon" href="/img/favicon.ico" rel="icon"/>
+  <link type="image/png" href="http://www.gstatic.com/sites/p/95d82e/system/app/images/apple-touch-icon.png" rel="apple-touch-icon">
+
+
+  <meta name="title" content="Quarteera /// Russian Queer in Germany">
+  <meta itemprop="name" content="Quarteera /// Russian Queer in Germany">
+  <meta property="og:title" content="Quarteera /// Russian Queer in Germany">
+  <meta name="description" content="Russischsprachige LGBT in Deutschland Русскоговорящие ЛГБТ в Германии Russian Queer in Germany">
+  <meta itemprop="description" content="Russischsprachige LGBT in Deutschland Русскоговорящие ЛГБТ в Германии Russian Queer in Germany">
+  <meta id="meta-tag-description" property="og:description" content="Russischsprachige LGBT in Deutschland Русскоговорящие ЛГБТ в Германии Russian Queer in Germany">
+
+  <meta content="/img/og-image.jpg" itemprop="image">
+  <!--todo: main url-->
+  <meta content="/img/og-image.jpg" property="og:image">
+  <!--todo: main url-->
+
+  <meta name="keywords" content=""/>
+  <meta name="last-modified" content="9/25/2015 7:17:58 PM"/>
+
+  <script src="/js/jquery-1.11.3.min.js"></script>
+  <script src="/js/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+
+  <script>
+    $(function ()
+    {
+      $("#menu").tabs(
+        {
+          collapsible: true,
+          active: false,
+          hide: {effect: "fade", duration: 300},
+          show: {effect: "fade", duration: 300}
+        }
+      );
+    });
+    $(function ()
+    {
+      $.ajaxSetup({
+        error: function (req)
+        {
+          if (req.status == 0)
+          {
+            return;
+          }
+          console.log(req);
+          alert('Failed: ' + req.status + ' ' + req.statusText + (req.responseText && req.responseText.length < 200 ? ': ' + req.responseText : ''));
+        }
+      });
+    });
+  </script>
 </head>
