--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,10 +1,4 @@
 ---
 ---
 
-@import "mixins";
-@import "normalize";
-@import "gridism";
-@import "pygments";
-@import "font-awesome";
-@import "style";
-@import "docsearch";
+@import "main";
