--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="header__wrapper">
     <a href="/" class="header__logo">
       <img alt="$index-title" src="/img/logo.png" width="128" height="149"/>
-      <img class="header__logo-title" alt="Quarteera /// Russian Queer in Germany" src="/img/$main-logo-img-scr" width="320"/>
+      <img class="header__logo-title" alt="Quarteera /// Russian Queer in Germany" src="/img/logo-title_ru.png" width="320"/>
     </a>
 
     <div class="header__info">
@@ -21,7 +21,7 @@
         <li><a class="header__contact_fb" href="https://www.facebook.com/Quarteera"><img alt="Quarteera at Facebook" src="/img/contact-fb.svg" width="19" height="25"/></a></li>
         <li><a class="header__contact_vk" href="http://vk.com/quarteera"><img alt="Quarteera at VKontakte" src="/img/contact-vk.svg" width="39" height="25"/></a></li>
       </ul>
-      <div class="header__info_hold header__info_last"><a href="$main-url-no-lang">$main-change-lang</a></div>
+      <!--<div class="header__info_hold header__info_last"><a href="$main-url-no-lang">$main-change-lang</a></div>-->
     </div>
   </div>
 </header>
