--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,13 @@
-<footer>
-  <div class="grid">
-    <div class="unit one-third center-on-mobiles">
-      <p>The contents of this website are <br />&copy;&nbsp;{{ site.time | date: '%Y' }} under the terms of the <a href="{{ site.repository }}/blob/master/LICENSE">MIT&nbsp;License</a>.</p>
+<footer class="footer">
+  <div class="footer__wrapper">
+    <div class="footer__copyright_col">
+            <span class="footer__copyright">
+                &copy; 2018 Quarteera e.V.<br/>
+                <a href="">Impressum</a> <a href="">Контакты</a>
+            </span>
     </div>
-    <div class="unit two-thirds align-right center-on-mobiles">
-      <p>
-        Proudly hosted by
-        <a href="https://github.com">
-          <img src="/img/footer-logo.png" width="100" height="30" alt="GitHub • Social coding">
-        </a>
-      </p>
-    </div>
-    <div class="unit two-thirds align-right center-on-mobiles">
-      <p>
-        Sponsored by
-        {% for sponsor in site.data.sponsors %}
-          <a href="{{ sponsor.url }}" style="margin-left: 10px;">
-            <img src="{{ sponsor.image }}" height="{{ sponsor.height }}" width="{{ sponsor.width }}" alt="{{ sponsor.name }}">
-          </a>
-        {% endfor %}
-      </p>
+    <div class="footer__menu_col">
+      {% include site-map.html %}
     </div>
   </div>
 </footer>
