--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,13 @@
     <div class="header__info">
       <ul class="header__info_hold">
         <li>
-          $header-info-official
+          <p>Quarteera e.V.</p><p>Postfach 58 05 36<br/>10414 Berlin</p><br/><a href="mailto:info@quarteera.de">info@quarteera.de</a>
         </li>
         <li>
-          $header-info-meet
+          <p>Место встречи</p><p>Kleiststr. 35 Berlin<br/>(Звонок LSVD)</p>
         </li>
         <li>
-          <a href="donate.html" class="header__lnk-donate">$main-donation</a>
+          <a href="donate.html" class="header__lnk-donate">Помочь нам</a>
         </li>
       </ul>
       <ul class="header__info_hold header__info_next">
