--- a/_includes/main-menu.html
+++ b/_includes/main-menu.html
@@ -20,15 +20,23 @@
     <h2>{{ section.title }}</h2>
     <div class="item__title">
       <img class="item__title_img" src="/img/title-{{ section.ref }}.png" alt="{{ section.title }}" width="150" height="100">
-      {% for item in section.docs %}
+      {% for item in section.top %}
       {% assign item_url = item.permalink | prepend:"/docs/" | append:"/" %}
       {% assign p = site.docs | where:"permalink", item_url | first %}
       <p><a href="{{ item.permalink }}">{{ item.title }}</a></p>
       {% endfor %}
     </div>
     <div class="item__description">
-      {{ section.description }}
+      <p>
+        {{ section.description }}
+      </p>
       <br/>
+      {% for item in section.bottom %}
+      {% assign item_url = item.permalink | prepend:"/docs/" | append:"/" %}
+      {% assign p = site.docs | where:"permalink", item_url | first %}
+      <p style="text-indent: 0.6em"><a href="{{ item.permalink }}">{{ item.title }}</a></p>
+      <br/>
+      {% endfor %}
     </div>
   </div>
   {% endfor %}
